# dnb_word_counter

./: CMakeLists.txt  README.md  package.xml
fnb/: count_words.json
launch/: start.launch
module_config/: module_counter.yaml
scripts/: counter.py
srv/: CountWords.srv
